Fixed alignment and date formating in orders page

--- a/src/components/Order/OrderCard.css
+++ b/src/components/Order/OrderCard.css
@@ -1,6 +1,6 @@
 .OrderCard {
   width: 97%;
-  height: 150px;
+  height: 180px;
   margin: 2% auto;
   padding: 30px;
   box-sizing: border-box;
@@ -8,6 +8,7 @@
   display: flex;
   align-items: flex-start;
   flex-direction: column;
+  justify-content: center;
   border: 1px solid rgba(187, 175, 175, 0.568);
   border-radius: 5px;
 }
